--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,20 +21,41 @@
   <link href="{{ asset('frontOffice/vendor/swiper/swiper-bundle.min.css') }}" rel="stylesheet">
   <link href="{{ asset('frontOffice/css/main.css') }}" rel="stylesheet">
   <link href="{{ asset('frontOffice/css/custom.css') }}" rel="stylesheet">
-  <!-- Google Translate-->
-  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-  <script>
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement(
-                { 
-                    pageLanguage: 'en', 
-                    autoDisplay: false,
-                    layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-                },
-                'google_translate_element'
-            );
-        }
-    </script>
+  <!-- Add the Google Translate API script -->
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+            { 
+                pageLanguage: 'en', 
+                autoDisplay: false,
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+            },
+            'google_translate_element'
+        );
+    }
+  </script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <style>
+    .goog-te-gadget {
+        font-size: 0px !important;
+    }
+    .goog-te-gadget .goog-logo-link {
+        display: none !important;
+    }
+    .goog-te-gadget .goog-te-combo {
+        margin: 4px 0 !important;
+        padding: 8px !important;
+        border-radius: 4px !important;
+        border: 1px solid #ccc !important;
+    }
+    #google_translate_element {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 9999;
+    }
+  </style>
+    
   <!--Bootstrap ithink -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     
@@ -61,6 +82,7 @@
       </a>
 
       <nav id="navmenu" class="navmenu">
+      
         <ul>
           <li><a href="{{ path('app_home') }}" class="active">Home<br></a></li>
           
@@ -337,6 +359,7 @@
         </div>
 
       </div>
+      
     </div>
 
     <div class="container copyright text-center mt-4">
