--- a/templates/team/show.html.twig
+++ b/templates/team/show.html.twig
@@ -27,6 +27,31 @@
       {% endfor %}
     </ul>
 
-    <a href="{{ path('app_team_index') }}" class="btn btn-secondary mt-4">Back to List</a>
+    <h3 class="mt-4">Team Members</h3>
+    <ul class="list-group mb-4">
+      {% for user in team.users %}
+        <li class="list-group-item">
+          {{ user.getFullName() }} ({{ user.userRole }})
+        </li>
+      {% else %}
+        <li class="list-group-item text-muted">No athletes assigned to this team yet.</li>
+      {% endfor %}
+    </ul>
+
+    <div class="d-flex gap-2">
+      <a href="{{ path('app_team_manage_players', {'id': team.id}) }}" class="btn btn-primary">
+        <i class="bi bi-person-gear"></i> Manage Players
+      </a>
+      <a href="{{ path('app_team_index') }}" class="btn btn-secondary">Back to List</a>
+      <a href="{{ path('app_team_edit', {'id': team.id}) }}" class="btn btn-outline-primary">
+        <i class="bi bi-pencil"></i> Edit
+      </a>
+      <form method="post" action="{{ path('app_team_delete', {'id': team.id}) }}" onsubmit="return confirm('Are you sure you want to delete this team?');">
+        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ team.id) }}">
+        <button class="btn btn-outline-danger">
+          <i class="bi bi-trash"></i> Delete
+        </button>
+      </form>
+    </div>
   </div>
 {% endblock %}
